# mirage_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
docs/en/: build.md
docs/zh/: README.md  build.md
examples/: xmake.lua
libs/mirage_base/: CMakeLists.txt  define.hpp  xmake.lua
libs/mirage_base/auto_ptr/: observe.hpp  observed.hpp  owned.hpp  ref_count.cpp  ref_count.hpp  shared.hpp  weak.hpp
libs/mirage_base/buffer/: aligned_buffer.cpp  aligned_buffer.hpp
libs/mirage_base/container/: array.hpp  hash_map.hpp  hash_set.hpp  singly_linked_list.hpp
libs/mirage_base/define/: check.hpp  export.hpp
libs/mirage_base/memory/: aligned_buffer.cpp  aligned_buffer.hpp
libs/mirage_base/sync/: lock.cpp  lock.hpp  lock_impl.hpp  lock_impl_msvc.cpp  lock_impl_posix.cpp  lock_msvc.cpp  lock_posix.cpp  rw_lock.cpp  rw_lock.hpp  rw_lock_msvc.cpp  rw_lock_posix.cpp
libs/mirage_base/util/: aligned_memory.hpp  constant.hpp  func_trait.hpp  hash.hpp  key_val.hpp  math.cpp  math.hpp  optional.hpp  type_id.cpp  type_id.hpp  type_list.hpp
libs/mirage_base/wrap/: aligned_memory.hpp  box.cpp  box.hpp  optional.hpp  place_holder.hpp
libs/mirage_ecs/: CMakeLists.txt  define.hpp  marker.hpp  xmake.lua
libs/mirage_ecs/archetype/: archetype.cpp  archetype.hpp  archetype_descriptor.cpp  archetype_descriptor.hpp  meta_type.cpp  meta_type.hpp  type_id.cpp  type_id.hpp  type_meta.cpp  type_meta.hpp  type_registry.cpp  type_registry.hpp
libs/mirage_ecs/component/: component_bundle.cpp  component_bundle.hpp  component_handler.cpp  component_handler.hpp  component_id.cpp  component_id.hpp
libs/mirage_ecs/define/: export.hpp
libs/mirage_ecs/entity/: archetype.cpp  archetype.hpp  archetype_data_page.cpp  archetype_data_page.hpp  archetype_descriptor.cpp  archetype_descriptor.hpp  archetype_id.hpp  archetype_layout.hpp  archetype_page_pool.cpp  archetype_page_pool.hpp  component_func_table.hpp  component_package.cpp  component_package.hpp  data_chunk.cpp  data_chunk.hpp  entity_chunk.cpp  entity_chunk.hpp  entity_descriptor.cpp  entity_descriptor.hpp  entity_id.hpp  entity_layout.cpp  entity_layout.hpp  entity_manager.cpp  entity_manager.hpp  generation_id.hpp
libs/mirage_ecs/entity/buffer/: aligned_buffer.cpp  aligned_buffer.hpp  aligned_buffer_pool.cpp  aligned_buffer_pool.hpp  archetype_data_buffer.cpp  archetype_data_buffer.hpp  sparse_dense_buffer.cpp  sparse_dense_buffer.hpp
libs/mirage_ecs/entity/memory/: aligned_buffer.cpp  aligned_buffer.hpp  aligned_page.hpp
libs/mirage_ecs/framework/: plugin.cpp  plugin.hpp  world.cpp  world.hpp
libs/mirage_ecs/system/: context.cpp  context.hpp  extract.hpp  param_extract.hpp  query.hpp  resource.hpp  system.cpp  system.hpp  system_context.cpp  system_context.hpp
libs/mirage_ecs/util/: aligned_buffer_pool.cpp  aligned_buffer_pool.hpp  marker.hpp  type_id.cpp  type_id.hpp  type_set.cpp  type_set.hpp
src/mirage_framework/: application.cpp  application.hpp  define.hpp
src/mirage_framework/base/auto_ptr/: destructor.hpp  owned.hpp  ref_count.cpp  ref_count.hpp  shared.hpp  weak.hpp
src/mirage_framework/base/container/: array.hpp  concept.hpp  hash_map.hpp  singly_linked_list.hpp
src/mirage_framework/base/synchronize/: lock.cc  lock.cpp  lock.h  lock.hpp  lock_impl.cc  lock_impl.cpp  lock_impl.h  lock_impl.hpp
src/mirage_framework/base/util/: aligned_memory.hpp  hash.hpp  meta_type.cpp  meta_type.hpp  optional.hpp
src/mirage_framework/task/: async_queue.hpp  packed_task.cpp  packed_task.hpp  stage.cpp  stage.hpp  task.hpp
test/: xmake.lua
test/mirage_framework/: array_tests.cpp  auto_ptr_tests.cpp  hash_map_tests.cpp  linked_list_tests.cpp  task_tests.cpp  util_tests.cpp
tests/: CMakeLists.txt  async_queue_tests.cpp  xmake.lua
tests/mirage_base/: CMakeLists.txt  xmake.lua
tests/mirage_base/auto_ptr/: observed_tests.cpp  owned_tests.cpp  ref_count_tests.cpp  ref_counted_ptr_tests.cpp  shared_tests.cpp  weak_tests.cpp
tests/mirage_base/container/: array_tests.cpp  hash_map_tests.cpp  hash_set_tests.cpp  singly_linked_list.cpp  singly_linked_list_tests.cpp
tests/mirage_base/util/: func_trait_tests.cpp  optional_tests.cpp  type_id_tests.cpp
tests/mirage_base/wrap/: box_tests.cpp  optional_tests.cpp
tests/mirage_ecs/: CMakeLists.txt  xmake.lua
tests/mirage_ecs/archetype/: archetype_tests.cpp  meta_type_tests.cpp  type_id_tests.cpp  type_meta_tests.cpp
tests/mirage_ecs/component/: component_bundle_tests.cpp  component_handler_tests.cpp  component_id_tests.cpp
tests/mirage_ecs/entity/: archetype_data_page_tests.cpp  archetype_descriptor_tests.cpp  archetype_tests.cpp  component_package_tests.cpp  entity_descriptor_tests.cpp  entity_layout_tests.cpp
tests/mirage_ecs/entity/buffer/: aligned_buffer_pool_tests.cpp  archetype_data_buffer_tests.cpp  sparse_dense_buffer_tests.cpp
tests/mirage_ecs/system/: extract_tests.cpp  query_tests.cpp  system_tests.cpp
tests/mirage_ecs/util/: type_id_tests.cpp  type_set_tests.cpp
