message(STATUS "Building test.mirage_base...")
file(GLOB_RECURSE TESTS "**.cpp")
add_executable(test.mirage_base ${TESTS})
gtest_discover_tests(test.mirage_base)
if (MIRAGE_BUILD_SPLIT)
  target_link_libraries(test.mirage_base mirage_base)
else ()
  target_link_libraries(test.mirage_base mirage_engine)
endif ()
