message(STATUS "Building test.mirage_ecs...")
file(GLOB_RECURSE TESTS "**.cpp")
add_executable(test.mirage_ecs ${TESTS})
gtest_discover_tests(test.mirage_ecs)
if (MIRAGE_BUILD_SPLIT)
  target_link_libraries(test.mirage_ecs mirage_ecs)
else ()
  target_link_libraries(test.mirage_ecs mirage_engine)
endif ()
